load("@rules_python//python:defs.bzl", "py_library")

# Shared pip dependencies for legacy code.
# Add commonly needed packages here once, use everywhere.
# As we modularize, this will shrink and targets get more specific deps.
py_library(
    name = "third_party",
    visibility = ["//visibility:public"],
    deps = [
        "@pypi//asgiref",
        "@pypi//cachetools",
        "@pypi//celery",
        "@pypi//cryptography",
        "@pypi//dj_database_url",
        "@pypi//django",
        "@pypi//django_cors_headers",
        "@pypi//django_deprecate_fields",
        "@pypi//django_structlog",
        "@pypi//djangorestframework",
        "@pypi//drf_spectacular",
        "@pypi//lzstring",
        "@pypi//orjson",
        "@pypi//posthoganalytics",
        "@pypi//prometheus_client",
        "@pypi//psycopg",
        "@pypi//pydantic",
        "@pypi//python_dateutil",
        "@pypi//pytz",
        "@pypi//redis",
        "@pypi//semantic_version",
        "@pypi//statshog",
        "@pypi//structlog",
        "@pypi//user_agents",
        "@pypi//boto3",
        "@pypi//clickhouse_connect",
        "@pypi//clickhouse_driver",
        "@pypi//clickhouse_pool",
        "@pypi//infi_clickhouse_orm",
        "@pypi//kafka_python",
        "@pypi//opentelemetry_api",
        "@pypi//opentelemetry_sdk",
        "@pypi//temporalio",
        "@pypi//whitenoise",
    ],
)
