load("@rules_python//python:defs.bzl", "py_library")

# Shared pip dependencies for legacy code.
# Add commonly needed packages here once, use everywhere.
# As we modularize, this will shrink and targets get more specific deps.
py_library(
    name = "third_party",
    visibility = ["//visibility:public"],
    deps = [
        "@pypi//asgiref",
        "@pypi//cachetools",
        "@pypi//celery",
        "@pypi//cryptography",
        "@pypi//dj_database_url",
        "@pypi//django",
        "@pypi//django_cors_headers",
        "@pypi//django_deprecate_fields",
        "@pypi//django_structlog",
        "@pypi//djangorestframework",
        "@pypi//drf_spectacular",
        "@pypi//lzstring",
        "@pypi//orjson",
        "@pypi//posthoganalytics",
        "@pypi//prometheus_client",
        "@pypi//psycopg",
        "@pypi//pydantic",
        "@pypi//python_dateutil",
        "@pypi//pytz",
        "@pypi//redis",
        "@pypi//semantic_version",
        "@pypi//statshog",
        "@pypi//structlog",
        "@pypi//user_agents",
        "@pypi//boto3",
        "@pypi//clickhouse_connect",
        "@pypi//clickhouse_driver",
        "@pypi//clickhouse_pool",
        "@pypi//infi_clickhouse_orm",
        "@pypi//kafka_python",
        "@pypi//opentelemetry_api",
        "@pypi//opentelemetry_sdk",
        "@pypi//nexus_rpc",
        "@pypi//temporalio",
        "@pypi//whitenoise",
        "@pypi//aiohttp",
        "@pypi//pyarrow",
        "@pypi//aiokafka",
        "@pypi//dagster",
        "@pypi//psycopg_binary",
        "@pypi//django_loginas",
        "@pypi//social_auth_app_django",
        "@pypi//django_filter",
        "@pypi//django_axes",
        "@pypi//django_otp",
        "@pypi//django_two_factor_auth",
        "@pypi//django_oauth_toolkit",
        "@pypi//django_admin_inline_paginator",
        "@pypi//django_linear_migrations",
        "@pypi//dlt",
        "@pypi//hogql_parser",
        "@pypi//chdb",
        "@pypi//s3fs",
        "@pypi//paramiko",
        "@pypi//sshtunnel",
        "@pypi//google_cloud_bigquery",
        "@pypi//google_cloud_bigquery_storage",
        "@pypi//deltalake",
        "@pypi//disposable_email_domains",
        "@pypi//free_email_domains",
        "@pypi//slack_sdk",
        "@pypi//django_redis",
        "@pypi//bingads",
        "@pypi//google_ads",
        "@pypi//gspread",
        "@pypi//linkedin_api_client",
        "@pypi//pymongo",
        "@pypi//pymysql",
        "@pypi//snowflake_connector_python",
        "@pypi//stripe",
        "@pypi//zxcvbn",
        "@pypi//css_inline",
        "@pypi//lxml",
        "@pypi//tiktoken",
        "@pypi//langchain",
        "@pypi//langchain_openai",
        "@pypi//token_bucket",
        "@pypi//drf_extensions",
        "@pypi//djangorestframework_dataclasses",
        "@pypi//geoip2",
        "@pypi//google_genai",
        "@pypi//brotli",
        "@pypi//mimesis",
        "@pypi//selenium",
        "@pypi//webdriver_manager",
        "@pypi//playwright",
        "@pypi//retry",
        "@pypi//aioboto3",
        "@pypi//databricks_sql_connector",
        "@pypi//databricks_sdk",
        "@pypi//anthropic",
        "@pypi//modal",
        "@pypi//djangorestframework_csv",
        "@pypi//python_snappy",
        "@pypi//scikit_learn",
        "@pypi//mistralai",
        "@pypi//nanoid",
        "@pypi//langchain_anthropic",
        "@pypi//elevenlabs",
        "@pypi//langgraph",
        "@pypi//jsonref",
        "@pypi//azure_core",
        "@pypi//azure_ai_inference",
        "@pypi//azure_storage_blob",
        "@pypi//glom",
        "@pypi//pymediainfo",
        "@pypi//natsort",
        "@pypi//markdown_to_mrkdwn",
        "@pypi//python3_saml",
        "@pypi//nh3",
        "@pypi//pillow",
        "@pypi//django_prometheus",
        "@pypi//webauthn",
    ],
)
