[package]
name = "serialization-format-size-test"
version = "0.1.0"
edition = "2021"
publish = false

# Standalone experiment — intentionally NOT part of the rust/ workspace.
[workspace]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prost = "0.13"
apache-avro = "0.17"
rand = "0.8"

[profile.release]
opt-level = 3
