[project]
name = "automl"
version = "0.1.0"
description = "AutoML hackathon prototype: DuckDB → Polars → AutoGluon"
readme = "README.md"
requires-python = "==3.12.12"
dependencies = [
    "autogluon-tabular[catboost,fastai,lightgbm,xgboost]>=1.2",
    "polars>=1.37",
    "duckdb>=1.5",
    "pyarrow>=18.1",
    "numpy>=2.0",
    "click>=8.0",
    "structlog>=25.4.0,<26.0.0",
    "torch>=2.8.0,<3.0.0",
    "requests~=2.33.0",
    "ipython>=9.3.0,<10.0.0",
]

[project.scripts]
automl = "products.automl.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Defense-in-depth: the root workspace pyproject already enforces a 7-day
# package release-age floor (per security policy, see #ask-security on Slack
# 2026-05-13). Re-declaring here so this product stays protected if it's ever
# resolved standalone (uv build from this dir, uv pip install -e ., etc.).
[tool.uv]
exclude-newer = "7 days"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
