[package]
name = "agent-sync"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
axum = { workspace = true }
axum-extra = { version = "0.9", features = ["typed-header"] }
async-stream = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
clickhouse = { workspace = true }
envconfig = { workspace = true }
eyre = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
http = { workspace = true }
metrics = { workspace = true }
moka = { workspace = true }
rdkafka = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1"
tokio-util = { workspace = true }
time = { workspace = true }
parking_lot = "0.12"
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

common-alloc = { path = "../common/alloc" }
common-continuous-profiling = { path = "../common/continuous_profiling" }
common-kafka = { path = "../common/kafka" }
common-metrics = { path = "../common/metrics" }
health = { path = "../common/health" }

[dev-dependencies]
tokio-test = "0.4"
tower = { workspace = true, features = ["util"] }
futures = { workspace = true }
http-body-util = "0.1"
