[package]
name = "autocomplete"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
time = { workspace = true }
rdkafka = { workspace = true }
tokio = { workspace = true }
envconfig = {workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
